--- a/build.gradle
+++ b/build.gradle
@@ -30,14 +30,17 @@ subprojects {
 
     dependencies {
         testImplementation 'org.objenesis:objenesis:3.1'
-        testImplementation 'org.spockframework:spock-core:2.0-M2-groovy-3.0'
+        testImplementation ('org.spockframework:spock-core:2.0-M2-groovy-3.0') {
+            exclude group: 'org.codehaus.groovy'
+        }
         testImplementation 'nl.jqno.equalsverifier:equalsverifier:3.1.13'
         testImplementation 'org.codehaus.groovy:groovy-all:3.0.3'
+        testImplementation 'commons-codec:commons-codec:1.14'
     }
 
     test {
         jvmArgs '-ea'
-
+        useJUnitPlatform()
         testLogging.showStandardStreams = true
         testLogging.exceptionFormat = 'full'
     }
