--- a/build.gradle
+++ b/build.gradle
@@ -36,6 +36,7 @@ subprojects {
         testImplementation 'nl.jqno.equalsverifier:equalsverifier:3.1.13'
         testImplementation 'org.codehaus.groovy:groovy-all:3.0.3'
         testImplementation 'commons-codec:commons-codec:1.14'
+        testImplementation 'cglib:cglib-nodep:3.3.0'
     }
 
     test {
