--- a/build.gradle
+++ b/build.gradle
@@ -14,6 +14,7 @@ plugins {
 
 // gradle aggregateJavadoc
 apply plugin: 'nebula-aggregate-javadocs'
+apply plugin: 'jacoco'
 
 allprojects {
     group = 'io.emeraldpay.pjc'
@@ -87,7 +88,7 @@ subprojects {
     }
 
     jacoco {
-        toolVersion = "0.8.4"
+        toolVersion = "0.8.5"
     }
 
     publishing {
@@ -115,6 +116,23 @@ subprojects {
                 }
             }
         }
+    }
+}
+
+jacoco {
+    toolVersion = "0.8.5"
+}
+
+task coverageReport(type: JacocoReport) {
+    dependsOn = subprojects.test
+    additionalSourceDirs.setFrom files(subprojects.sourceSets.main.allSource.srcDirs)
+    sourceDirectories.setFrom files(subprojects.sourceSets.main.allSource.srcDirs)
+    classDirectories.setFrom files(subprojects.sourceSets.main.output)
+    executionData.setFrom project.fileTree(dir: '.', include: '**/build/jacoco/test.exec')
+    reports {
+        xml.enabled true
+        csv.enabled false
+        html.enabled true
     }
 }
 
