--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -17,3 +17,13 @@ jobs:
         uses: eskatos/gradle-command-action@v1
         with:
           arguments: check
+
+      - name: Build Coverage Report
+        uses: eskatos/gradle-command-action@v1
+        with:
+          arguments: coverageReport
+
+      - name: Upload Coverage Report
+        uses: codecov/codecov-action@v1
+        with:
+          file: ./build/reports/jacoco/coverageReport/coverageReport.xml
