--- a/settings.gradle
+++ b/settings.gradle
@@ -1,4 +1,4 @@
-rootProject.name = 'polkadot-java-client'
+rootProject.name = 'polkaj-root'
 
-include "ss58", "scale", "types"
+include "polkaj-ss58", "polkaj-scale", "polkaj-types"
 
