--- a/build.gradle
+++ b/build.gradle
@@ -126,7 +126,7 @@ subprojects {
         user = System.getenv('BINTRAY_USER')
         key = System.getenv('BINTRAY_API_KEY')
 
-        dryRun=true
+        dryRun=false
         publish=true
         override=true
 
