--- a/build.gradle
+++ b/build.gradle
@@ -37,6 +37,7 @@ subprojects {
     apply plugin: 'maven-publish'
     apply plugin: 'groovy'
     apply plugin: 'jacoco'
+    apply plugin: 'com.jfrog.bintray'
 
     targetCompatibility = '11'
     sourceCompatibility = '11'
@@ -120,6 +121,38 @@ subprojects {
             }
         }
     }
+
+    bintray {
+        user = System.getenv('BINTRAY_USER')
+        key = System.getenv('BINTRAY_API_KEY')
+
+        dryRun=false
+        publish=true
+        override=true
+
+        publications = ['mavenJava']
+
+        pkg {
+            userOrg = 'emerald'
+            repo = 'polkaj'
+            name = project.name
+            licenses = ['Apache-2.0']
+            vcsUrl = 'https://github.com/emeraldpay/polkaj.git'
+            labels = ['polkadot', 'blockchain']
+            publicDownloadNumbers = true
+
+            version {
+                name = project.version
+                description = 'PolkaJ ' + project.version
+                released  = new Date()
+                vcsTag = project.version
+
+                gpg {
+                    sign = true
+                }
+            }
+        }
+    }
 }
 
 jacoco {
@@ -136,5 +169,28 @@ task coverageReport(type: JacocoReport) {
         xml.enabled true
         csv.enabled false
         html.enabled true
+    }
+}
+
+task syncJars(type: Sync) {
+    allprojects { p ->
+        from p.tasks.withType(Jar)
+    }
+    into "${buildDir}/libs/"
+}
+
+// Skip Bintray for the root module
+bintray {
+    dryRun=true
+    publish=false
+    override=true
+    publications = []
+    configurations = []
+    pkg {
+        repo = 'none'
+        name = 'none'
+        version {
+            name = 'none'
+        }
     }
 }
