problem: typo in publish script

--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -56,4 +56,4 @@ jobs:
           arguments: bintrayUpload
         env:
           BINTRAY_USER: ${{ secrets.BINTRAY_USER }}
-          BINTRAY_API_KEY: $${{ secrets.BINTRAY_API_KEY }}
+          BINTRAY_API_KEY: ${{ secrets.BINTRAY_API_KEY }}
