--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -1,6 +1,6 @@
 name: Tests
 
-on: [push]
+on: [push, pull_request]
 
 jobs:
   unit-test:
@@ -27,3 +27,23 @@ jobs:
         uses: codecov/codecov-action@v1
         with:
           file: ./build/reports/jacoco/coverageReport/coverageReport.xml
+
+  env-test:
+    name: Test on ${{ matrix.os }} using Java ${{ matrix.java }}
+    strategy:
+      matrix:
+        java: ["11", "12", "13", "14", "15-ea"]
+        os: ["windows-latest", "macos-latest", "ubuntu-latest"]
+    runs-on: ${{ matrix.os }}
+    steps:
+      - uses: actions/checkout@v2
+
+      - name: Set up JDK
+        uses: actions/setup-java@v1
+        with:
+          java-version: ${{ matrix.java }}
+
+      - name: Check
+        uses: eskatos/gradle-command-action@v1
+        with:
+          arguments: check
