--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -55,7 +55,7 @@ jobs:
     continue-on-error: true
     strategy:
       matrix:
-        locale: ["ru_RU.UTF-8", "de_DE.UTF-8", "de_CH.UTF-8"]
+        locale: ["ru_RU.UTF-8", "de_DE.UTF-8", "de_CH.UTF-8", "zn_CN.UTF-8"]
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
