solution: WebSockets client for API

--- a/examples/rpc/build.gradle
+++ b/examples/rpc/build.gradle
@@ -12,6 +12,7 @@ apply from: '../common.gradle'
 
 dependencies {
     implementation "io.emeraldpay.polkaj:polkaj-client-rpc:$polkajVersion"
+    implementation "io.emeraldpay.polkaj:polkaj-client-ws:$polkajVersion"
     implementation "io.emeraldpay.polkaj:polkaj-json:$polkajVersion"
     implementation 'commons-codec:commons-codec:1.14'
 }
