--- a/polkaj-client-ws/build.gradle
+++ b/polkaj-client-ws/build.gradle
@@ -2,5 +2,5 @@ dependencies {
     api project(":polkaj-json")
     api project(":polkaj-client")
 
-    testImplementation 'org.mock-server:mockserver-netty:5.10'
+    testImplementation 'org.java-websocket:Java-WebSocket:1.5.1'
 }
