--- a/settings.gradle
+++ b/settings.gradle
@@ -4,7 +4,7 @@ include "polkaj-ss58",
         "polkaj-scale",
         "polkaj-types",
         "polkaj-json",
-        "polkaj-client",
-        "polkaj-client-rpc",
-        "polkaj-client-ws"
+        "polkaj-api",
+        "polkaj-api-http",
+        "polkaj-api-ws"
 
