--- a/settings.gradle
+++ b/settings.gradle
@@ -2,6 +2,7 @@ rootProject.name = 'polkaj-root'
 
 include "polkaj-ss58",
         "polkaj-scale",
+        "polkaj-scale-types",
         "polkaj-types",
         "polkaj-json",
         "polkaj-api-base",
