--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -18,7 +18,7 @@ jobs:
       - name: Check
         uses: eskatos/gradle-command-action@v1
         with:
-          arguments: check
+          arguments: check -Ptestcoverage=true
 
       - name: Build Coverage Report
         uses: eskatos/gradle-command-action@v1
