--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -1,9 +1,11 @@
 name: Tests
 
 on:
+  # if pushed directly to the master
   push:
     branches:
       - master
+  # on a pull request
   pull_request:
     branches:
       - master
