--- a/polkaj-api-http/build.gradle
+++ b/polkaj-api-http/build.gradle
@@ -1,5 +1,5 @@
 dependencies {
-    api project(":polkaj-json")
+    api project(":polkaj-json-types")
     api project(":polkaj-api-base")
 
     testImplementation 'org.mock-server:mockserver-netty:5.10'
