--- a/polkaj-api-ws/build.gradle
+++ b/polkaj-api-ws/build.gradle
@@ -1,5 +1,5 @@
 dependencies {
-    api project(":polkaj-json")
+    api project(":polkaj-json-types")
     api project(":polkaj-api-base")
 
     testImplementation 'org.java-websocket:Java-WebSocket:1.5.1'
