--- a/polkaj-json-types/build.gradle
+++ b/polkaj-json-types/build.gradle
@@ -1,5 +1,5 @@
 dependencies {
-    api project(":polkaj-types")
+    api project(":polkaj-common-types")
     api project(":polkaj-ss58")
 
     api 'com.fasterxml.jackson.core:jackson-databind:2.11.0'
