--- a/examples/runtime-explorer/build.gradle
+++ b/examples/runtime-explorer/build.gradle
@@ -18,7 +18,7 @@ apply from: '../common.gradle'
 dependencies {
     implementation "io.emeraldpay.polkaj:polkaj-api-http:$polkajVersion"
     implementation "io.emeraldpay.polkaj:polkaj-api-ws:$polkajVersion"
-    implementation "io.emeraldpay.polkaj:polkaj-json:$polkajVersion"
+    implementation "io.emeraldpay.polkaj:polkaj-json-types:$polkajVersion"
     implementation "io.emeraldpay.polkaj:polkaj-scale-types:$polkajVersion"
     implementation "commons-codec:commons-codec:1.14"
 
