--- a/examples/types/build.gradle
+++ b/examples/types/build.gradle
@@ -12,7 +12,7 @@ apply from: '../common.gradle'
 
 dependencies {
     implementation "io.emeraldpay.polkaj:polkaj-scale:$polkajVersion"
-    implementation "io.emeraldpay.polkaj:polkaj-types:$polkajVersion"
+    implementation "io.emeraldpay.polkaj:polkaj-common-types:$polkajVersion"
     implementation "io.emeraldpay.polkaj:polkaj-ss58:$polkajVersion"
     implementation 'commons-codec:commons-codec:1.14'
 }
