--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -58,6 +58,8 @@ jobs:
       - name: Check
         uses: eskatos/gradle-command-action@v1
         with:
+          # see https://github.com/eskatos/gradle-command-action/issues/24
+          wrapper-cache-enabled: false
           arguments: check
 
   # Formatter may behave differently on different locales, makes sure tests are not failing
