solution: stub for Schnorrkel implementation

--- a/settings.gradle
+++ b/settings.gradle
@@ -4,6 +4,7 @@ include "polkaj-ss58",
         "polkaj-scale",
         "polkaj-json-types",
         "polkaj-scale-types",
+        "polkaj-schnorrkel",
         "polkaj-common-types",
         "polkaj-api-base",
         "polkaj-api-http",
