--- a/examples/common.gradle
+++ b/examples/common.gradle
@@ -2,7 +2,7 @@
 // Common config for Polkaj Examples
 //
 ext {
-   polkajVersion = "0.2.3"
+   polkajVersion = "0.3.0-SNAPSHOT"
 }
 
 repositories {
