--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -3,21 +3,21 @@ name: Publish
 on:
   release:
     types: [created]
-  # on a pull request
-  pull_request:
-    branches:
-      - master
 
 jobs:
+  #
+  # Build native binary for Schnorrkel, used througj JNI
+  #
   native:
+    name: Prepare JNI lib (${{ matrix.os }})
     strategy:
       matrix:
         os: ["windows-latest", "macos-latest", "ubuntu-latest"]
     runs-on: ${{ matrix.os }}
     steps:
       - uses: actions/checkout@master
-#        with:
-#          ref: ${{ github.ref }}
+        with:
+          ref: ${{ github.ref }}
       - name: Install Rust
         uses: actions-rs/toolchain@v1
         with:
@@ -42,12 +42,17 @@ jobs:
         with:
           age: '1 week'
 
-
-  build-dist:
-    needs: native
+  #
+  # Publish Jars to current Github release
+  #
+  publish-github:
+    name: To Github
     runs-on: ubuntu-latest
+    needs: native
     steps:
       - uses: actions/checkout@master
+        with:
+          ref: ${{ github.ref }}
       - name: Set up JDK
         uses: actions/setup-java@v1
         with:
@@ -69,61 +74,43 @@ jobs:
         uses: eskatos/gradle-command-action@v1
         with:
           arguments: syncJars
-      - name: Upload jars
-        uses: actions/upload-artifact@v2
+      - name: Upload Jars
+        id: upload-release-asset
+        uses: svenstaro/upload-release-action@v1-release
         with:
-          name: jars
-          path: build/libs/*.jar
+          repo_token: ${{ secrets.GITHUB_TOKEN }}
+          tag: ${{ github.ref }}
+          file: ./build/libs/*.jar
+          file_glob: true
 
-#  publish-github:
-#    runs-on: ubuntu-latest
-#    steps:
-#      - uses: actions/checkout@master
-#        with:
-#          ref: ${{ github.ref }}
-#      - name: Set up JDK
-#        uses: actions/setup-java@v1
-#        with:
-#          java-version: 11
-#      - name: Check
-#        uses: eskatos/gradle-command-action@v1
-#        with:
-#          arguments: check
-#      - name: Build
-#        uses: eskatos/gradle-command-action@v1
-#        with:
-#          arguments: build
-#      - name: Sync Jars
-#        uses: eskatos/gradle-command-action@v1
-#        with:
-#          arguments: syncJars
-#      - name: Upload Jars
-#        id: upload-release-asset
-#        uses: svenstaro/upload-release-action@v1-release
-#        with:
-#          repo_token: ${{ secrets.GITHUB_TOKEN }}
-#          tag: ${{ github.ref }}
-#          file: ./build/libs/*.jar
-#          file_glob: true
-
-#  publish-bintray:
-#    runs-on: ubuntu-latest
-#    steps:
-#      - uses: actions/checkout@master
-#        with:
-#          ref: ${{ github.ref }}
-#      - name: Set up JDK
-#        uses: actions/setup-java@v1
-#        with:
-#          java-version: 11
-#      - name: Check
-#        uses: eskatos/gradle-command-action@v1
-#        with:
-#          arguments: check
-#      - name: Upload to Bintray
-#        uses: eskatos/gradle-command-action@v1
-#        with:
-#          arguments: bintrayUpload
-#        env:
-#          BINTRAY_USER: ${{ secrets.BINTRAY_USER }}
-#          BINTRAY_API_KEY: ${{ secrets.BINTRAY_API_KEY }}
+  #
+  # Maven release to Bintray
+  #
+  publish-bintray:
+    name: To Bintray
+    runs-on: ubuntu-latest
+    needs: native
+    steps:
+      - uses: actions/checkout@master
+        with:
+          ref: ${{ github.ref }}
+      - name: Set up JDK
+        uses: actions/setup-java@v1
+        with:
+          java-version: 11
+      - name: Download native lib
+        uses: actions/download-artifact@v2
+        with:
+          name: schnorrkel-lib
+          path: polkaj-schnorrkel/build/rust/release
+      - name: Check
+        uses: eskatos/gradle-command-action@v1
+        with:
+          arguments: check
+      - name: Upload to Bintray
+        uses: eskatos/gradle-command-action@v1
+        with:
+          arguments: bintrayUpload
+        env:
+          BINTRAY_USER: ${{ secrets.BINTRAY_USER }}
+          BINTRAY_API_KEY: ${{ secrets.BINTRAY_API_KEY }}
