--- a/settings.gradle
+++ b/settings.gradle
@@ -8,5 +8,6 @@ include "polkaj-ss58",
         "polkaj-common-types",
         "polkaj-api-base",
         "polkaj-api-http",
-        "polkaj-api-ws"
+        "polkaj-api-ws",
+        "polkaj-tx"
 
