solution: hashing with blake2

--- a/polkaj-tx/build.gradle
+++ b/polkaj-tx/build.gradle
@@ -6,4 +6,5 @@ dependencies {
 
     // for xxHash
     api 'net.openhft:zero-allocation-hashing:0.11'
+    api 'org.bouncycastle:bcprov-jdk15on:1.65'
 }
