--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -24,10 +24,15 @@ jobs:
         with:
           java-version: 11
 
+      - name: Build
+        uses: eskatos/gradle-command-action@v1
+        with:
+          arguments: build
+
       - name: Check
         uses: eskatos/gradle-command-action@v1
         with:
-          arguments: check --max-workers 1 --no-parallel --no-build-cache --no-daemon --console=plain
+          arguments: check
 
       - name: Build Coverage Report
         uses: eskatos/gradle-command-action@v1
