--- a/polkaj-tx/build.gradle
+++ b/polkaj-tx/build.gradle
@@ -1,6 +1,7 @@
 dependencies {
     api project(":polkaj-common-types")
     api project(":polkaj-scale-types")
+    api project(":polkaj-json-types")
     api project(":polkaj-ss58")
     api project(":polkaj-schnorrkel")
 
