solution: build automatic context from current rpc

--- a/polkaj-tx/build.gradle
+++ b/polkaj-tx/build.gradle
@@ -4,6 +4,7 @@ dependencies {
     api project(":polkaj-json-types")
     api project(":polkaj-ss58")
     api project(":polkaj-schnorrkel")
+    api project(":polkaj-api-base")
 
     // for xxHash
     api 'net.openhft:zero-allocation-hashing:0.11'
