--- a/polkaj-api-ws/build.gradle
+++ b/polkaj-api-ws/build.gradle
@@ -1,3 +1,9 @@
+compileJava {
+    targetCompatibility = '11'
+    sourceCompatibility = '11'
+}
+
+
 dependencies {
     api project(":polkaj-json-types")
     api project(":polkaj-api-base")
