--- a/polkaj-scale-types/build.gradle
+++ b/polkaj-scale-types/build.gradle
@@ -1,3 +1,5 @@
+apply from: '../common_java_app.gradle'
+
 dependencies {
     api project(":polkaj-scale")
     api project(":polkaj-common-types")
