--- a/polkaj-ss58/build.gradle
+++ b/polkaj-ss58/build.gradle
@@ -1,3 +1,5 @@
+apply from: '../common_java_app.gradle'
+
 dependencies {
     api 'com.github.multiformats:java-multibase:v1.0.0'
     implementation 'org.bouncycastle:bcprov-jdk15on:1.65'
