--- a/settings.gradle
+++ b/settings.gradle
@@ -9,5 +9,6 @@ include "polkaj-ss58",
         "polkaj-api-base",
         "polkaj-api-http",
         "polkaj-api-ws",
-        "polkaj-tx"
+        "polkaj-tx",
+        "polkaj-adapter-tests"
 
