--- a/polkaj-api-base/build.gradle
+++ b/polkaj-api-base/build.gradle
@@ -1,3 +1,8 @@
+    apply plugin: 'java'
+    apply plugin: 'java-library'
+    apply plugin: 'groovy'
+apply from: '../common_java_app.gradle'
+
 dependencies {
     api project(":polkaj-json-types")
 }
