--- a/polkaj-api-http/build.gradle
+++ b/polkaj-api-http/build.gradle
@@ -1,3 +1,5 @@
+apply from: '../common_java_app.gradle'
+
 compileJava {
     targetCompatibility = '11'
     sourceCompatibility = '11'
@@ -8,4 +10,5 @@ dependencies {
     api project(":polkaj-api-base")
 
     testImplementation 'org.mock-server:mockserver-netty:5.10'
+    testImplementation project(":polkaj-adapter-tests")
 }
