--- a/polkaj-api-ws/build.gradle
+++ b/polkaj-api-ws/build.gradle
@@ -1,3 +1,5 @@
+apply from: '../common_java_app.gradle'
+
 compileJava {
     targetCompatibility = '11'
     sourceCompatibility = '11'
@@ -9,4 +11,5 @@ dependencies {
     api project(":polkaj-api-base")
 
     testImplementation 'org.java-websocket:Java-WebSocket:1.5.1'
+    testImplementation project(":polkaj-adapter-tests")
 }
